# RepoRS

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
examples/: basic.py  basic.rs  test.rs
skyblock-repo/: Cargo.toml
skyblock-repo-macros/: Cargo.toml
skyblock-repo-macros/src/: lib.rs
skyblock-repo/src/models/: item.rs  mod.rs  npc.rs  shop.rs  zone.rs
src/: lib.rs
src/models/: enchantment.rs  enchantments.rs  item.rs  mod.rs  pet.rs  recipe.rs
src/utils/: mod.rs  repo.rs
