[package]
name = "skyblock-repo"
description = "Cargo package to interface with the Skyblock Repo"

version = "0.0.1"
edition = "2024"

license = "MIT"
repository = "https://github.com/SkyblockRepo/RepoRS"
readme = "README.md"

[dependencies]
log = "0.4.28"
regex = "1.11.2"
reqwest = "0.12.23"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
zip = "5.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
incremental = true
opt-level = 1
