[package]
name = "skyblock-repo"
description = "Cargo package to interface with the Skyblock Repo"
keywords = ["skyblock", "hypixel", "hypixel-skyblock"]

version = "0.0.1"
edition = "2024"

license = "MIT"
readme = "README.md"
repository = "https://github.com/SkyblockRepo/RepoRS"
homepage = "https://skyblockrepo.com"
documentation = "https://skyblockrepo.com/docs/integrations/rust"

[dependencies]
log = "0.4.28"
regex = "1.11.2"
reqwest = "0.12.23"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
zip = "5.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
incremental = true
opt-level = 1
