[package]
name = "skyblock-repo"
description = "Cargo/Python package to interface with the Skyblock Repo"
keywords = ["skyblock", "hypixel", "hypixel-skyblock"]

version = "1.0.2"
edition = "2024"

license = "MIT"
readme = "README.md"
repository = "https://github.com/SkyblockRepo/RepoRS"
homepage = "https://skyblockrepo.com"
documentation = "https://skyblockrepo.com/docs/integrations/rust"

[lib]
name = "skyblock_repo"
crate-type = ["cdylib", "rlib"]

[features]
default = []

log = ["dep:log"]

[dependencies]
log = { version = "0.4.28", optional = true }
pyo3 = { version = "0.26.0", features = ["extension-module", "experimental-async"] }
pyo3-async-runtimes = { version = "0.26.0", features = ["tokio-runtime", "attributes"] }
regex = "1.11.2"
reqwest = "0.12.23"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
zip = "5.0.0"
tokio = { version = "1.47.1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
incremental = true
opt-level = 1
